...
    "Watch",
    "Heater",
    "Scooter",
    "Computer",
    "Tablet",
  ];
  final recentData = ["Recan", "Nepal", "Laptop", "Mobile"];

  @override
  List<Widget>? buildActions(BuildContext context) {
    // action for the search
    return [
      IconButton(
...
